fix for border bottom on windows high-contrast issue, closes #1458

--- a/packages/nhsuk-frontend/src/nhsuk/components/header/_index.scss
+++ b/packages/nhsuk-frontend/src/nhsuk/components/header/_index.scss
@@ -336,6 +336,10 @@ $_header-item-active-size: $nhsuk-focus-width;
   border: 0 solid $color_nhsuk-white;
   color: $color_nhsuk-white;
 
+  @media screen and (forced-colors: active), (-ms-high-contrast: active) {
+    border: none;
+  }
+
   @include nhsuk-print-hide;
 }
 
